--- a/Gallery/index.html
+++ b/Gallery/index.html
@@ -182,77 +182,207 @@
   <div class="gallery-category" role="region" aria-label="Wedding Decor Gallery">
     <h2 role="heading" aria-level="2">Wedding Decor</h2>
     <div class="carousel-wrapper">
-      <div class="carousel track-wedding">
-        <img src="/images/gallery/wedding1.jpg" loading="eager" alt="Luxurious red and gold wedding stage decor with draped fabrics and floral arches in Edmonton" />
-        <img src="/images/gallery/wedding2.jpg" loading="eager" alt="Elegant wedding reception setup with white drapes and floral backdrop by Mira Creations" />
-        <img src="/images/gallery/wedding3.jpg" loading="eager" alt="Traditional mandap arrangement with gold pillars and marigold garlands" />
-        <img src="/images/gallery/wedding4.jpg" loading="eager" alt="Wedding head table decor with candles, rose petals, and custom signage" />
-        <img src="/images/gallery/wedding5.jpg" loading="eager" alt="Stage layout for Sikh wedding with cream draping and soft floral arrangements" />
-        <img src="/images/gallery/wedding1.jpg" loading="eager" alt="Repeat: Luxurious red and gold wedding stage decor" class="clone" />
-        <img src="/images/gallery/wedding2.jpg" loading="eager" alt="Repeat: Elegant reception with floral backdrop" class="clone" />
-        <img src="/images/gallery/wedding3.jpg" loading="eager" alt="Repeat: Mandap with gold and marigold decor" class="clone" />
-        <img src="/images/gallery/wedding4.jpg" loading="eager" alt="Repeat: Head table with candles and petals" class="clone" />
-        <img src="/images/gallery/wedding5.jpg" loading="eager" alt="Repeat: Cream draping with floral setup" class="clone" />
-      </div>
-    </div>
+  <div class="carousel track-wedding">
+    <picture>
+      <source srcset="/images/gallery/wedding1.webp" type="image/webp" />
+      <img src="/images/gallery/wedding1.jpg" loading="eager" alt="Luxurious red and gold wedding stage decor with draped fabrics and floral arches in Edmonton" />
+    </picture>
+    <picture>
+      <source srcset="/images/gallery/wedding2.webp" type="image/webp" />
+      <img src="/images/gallery/wedding2.jpg" loading="eager" alt="Elegant wedding reception setup with white drapes and floral backdrop by Mira Creations" />
+    </picture>
+    <picture>
+      <source srcset="/images/gallery/wedding3.webp" type="image/webp" />
+      <img src="/images/gallery/wedding3.jpg" loading="eager" alt="Traditional mandap arrangement with gold pillars and marigold garlands" />
+    </picture>
+    <picture>
+      <source srcset="/images/gallery/wedding4.webp" type="image/webp" />
+      <img src="/images/gallery/wedding4.jpg" loading="eager" alt="Wedding head table decor with candles, rose petals, and custom signage" />
+    </picture>
+    <picture>
+      <source srcset="/images/gallery/wedding5.webp" type="image/webp" />
+      <img src="/images/gallery/wedding5.jpg" loading="eager" alt="Stage layout for Sikh wedding with cream draping and soft floral arrangements" />
+    </picture>
+    <!-- Clones for looping -->
+    <picture>
+      <source srcset="/images/gallery/wedding1.webp" type="image/webp" />
+      <img src="/images/gallery/wedding1.jpg" loading="eager" alt="Repeat: Luxurious red and gold wedding stage decor" class="clone" />
+    </picture>
+    <picture>
+      <source srcset="/images/gallery/wedding2.webp" type="image/webp" />
+      <img src="/images/gallery/wedding2.jpg" loading="eager" alt="Repeat: Elegant reception with floral backdrop" class="clone" />
+    </picture>
+    <picture>
+      <source srcset="/images/gallery/wedding3.webp" type="image/webp" />
+      <img src="/images/gallery/wedding3.jpg" loading="eager" alt="Repeat: Mandap with gold and marigold decor" class="clone" />
+    </picture>
+    <picture>
+      <source srcset="/images/gallery/wedding4.webp" type="image/webp" />
+      <img src="/images/gallery/wedding4.jpg" loading="eager" alt="Repeat: Head table with candles and petals" class="clone" />
+    </picture>
+    <picture>
+      <source srcset="/images/gallery/wedding5.webp" type="image/webp" />
+      <img src="/images/gallery/wedding5.jpg" loading="eager" alt="Repeat: Cream draping with floral setup" class="clone" />
+    </picture>
+  </div>
+</div>
+
   </div>
 
   <!-- Special Events Decor -->
   <div class="gallery-category" role="region" aria-label="Special Events Decor Gallery">
-    <h2 role="heading" aria-level="2">Special Events Decor</h2>
-    <div class="carousel-wrapper">
-      <div class="carousel track-event">
+  <h2 role="heading" aria-level="2">Special Events Decor</h2>
+  <div class="carousel-wrapper">
+    <div class="carousel track-event">
+      <picture>
+        <source srcset="/images/gallery/event1.webp" type="image/webp" />
         <img src="/images/gallery/event1.jpg" loading="eager" alt="Pastel-themed baby shower with balloon arch and custom backdrop by Mira Creations" />
+      </picture>
+      <picture>
+        <source srcset="/images/gallery/event2.webp" type="image/webp" />
         <img src="/images/gallery/event2.jpg" loading="eager" alt="Birthday party decor with gold and black table settings and streamers" />
+      </picture>
+      <picture>
+        <source srcset="/images/gallery/event3.webp" type="image/webp" />
         <img src="/images/gallery/event3.jpg" loading="eager" alt="Anniversary celebration setup with candlelit centerpieces and rose petals" />
+      </picture>
+      <picture>
+        <source srcset="/images/gallery/event4.webp" type="image/webp" />
         <img src="/images/gallery/event4.jpg" loading="eager" alt="Cultural event decor featuring traditional fabric hangings and warm lighting" />
+      </picture>
+      <picture>
+        <source srcset="/images/gallery/event5.webp" type="image/webp" />
         <img src="/images/gallery/event5.jpg" loading="eager" alt="Graduation party setup with large balloon arch and gold-themed decor" />
+      </picture>
+      <!-- Clone slides for looping -->
+      <picture>
+        <source srcset="/images/gallery/event1.webp" type="image/webp" />
         <img src="/images/gallery/event1.jpg" loading="eager" alt="Repeat: Baby shower decor with balloons and signage" class="clone" />
+      </picture>
+      <picture>
+        <source srcset="/images/gallery/event2.webp" type="image/webp" />
         <img src="/images/gallery/event2.jpg" loading="eager" alt="Repeat: Birthday decor with black and gold accents" class="clone" />
+      </picture>
+      <picture>
+        <source srcset="/images/gallery/event3.webp" type="image/webp" />
         <img src="/images/gallery/event3.jpg" loading="eager" alt="Repeat: Anniversary decor with candles and florals" class="clone" />
+      </picture>
+      <picture>
+        <source srcset="/images/gallery/event4.webp" type="image/webp" />
         <img src="/images/gallery/event4.jpg" loading="eager" alt="Repeat: Cultural event with fabric decor" class="clone" />
+      </picture>
+      <picture>
+        <source srcset="/images/gallery/event5.webp" type="image/webp" />
         <img src="/images/gallery/event5.jpg" loading="eager" alt="Repeat: Graduation party decor with balloons" class="clone" />
-      </div>
+      </picture>
     </div>
   </div>
+</div>
+
 
   <!-- Jewellery -->
-  <div class="gallery-category" role="region" aria-label="Jewellery Showcase Gallery">
-    <h2 role="heading" aria-level="2">Jewellery</h2>
-    <div class="carousel-wrapper">
-      <div class="carousel track-jewellery">
+ <div class="gallery-category" role="region" aria-label="Jewellery Showcase Gallery">
+  <h2 role="heading" aria-level="2">Jewellery</h2>
+  <div class="carousel-wrapper">
+    <div class="carousel track-jewellery">
+      <picture>
+        <source srcset="/images/gallery/jewellery1.webp" type="image/webp" />
         <img src="/images/gallery/jewellery1.jpg" loading="eager" alt="Gold bridal necklace with intricate kundan work and dangling pearls for wedding styling" />
+      </picture>
+      <picture>
+        <source srcset="/images/gallery/jewellery2.webp" type="image/webp" />
         <img src="/images/gallery/jewellery2.jpg" loading="eager" alt="Statement earrings with gold and red stones displayed on soft velvet tray" />
+      </picture>
+      <picture>
+        <source srcset="/images/gallery/jewellery3.webp" type="image/webp" />
         <img src="/images/gallery/jewellery3.jpg" loading="eager" alt="Bridal jewellery choker with white stones and floral motif from Mira Creations" />
+      </picture>
+      <picture>
+        <source srcset="/images/gallery/jewellery4.webp" type="image/webp" />
         <img src="/images/gallery/jewellery4.jpg" loading="eager" alt="Pakistani wedding necklace set with matching jhumka earrings and traditional detailing" />
+      </picture>
+      <picture>
+        <source srcset="/images/gallery/jewellery5.webp" type="image/webp" />
         <img src="/images/gallery/jewellery5.jpg" loading="eager" alt="Classic bridal jewellery ensemble in red and gold tones for Indian weddings" />
+      </picture>
+      <!-- Clones for looping -->
+      <picture>
+        <source srcset="/images/gallery/jewellery1.webp" type="image/webp" />
         <img src="/images/gallery/jewellery1.jpg" loading="eager" alt="Repeat: Gold bridal kundan necklace with pearl detail" class="clone" />
+      </picture>
+      <picture>
+        <source srcset="/images/gallery/jewellery2.webp" type="image/webp" />
         <img src="/images/gallery/jewellery2.jpg" loading="eager" alt="Repeat: Gold and red statement earrings on display" class="clone" />
+      </picture>
+      <picture>
+        <source srcset="/images/gallery/jewellery3.webp" type="image/webp" />
         <img src="/images/gallery/jewellery3.jpg" loading="eager" alt="Repeat: White stone choker with floral motif" class="clone" />
+      </picture>
+      <picture>
+        <source srcset="/images/gallery/jewellery4.webp" type="image/webp" />
         <img src="/images/gallery/jewellery4.jpg" loading="eager" alt="Repeat: Traditional Pakistani jhumka necklace" class="clone" />
+      </picture>
+      <picture>
+        <source srcset="/images/gallery/jewellery5.webp" type="image/webp" />
         <img src="/images/gallery/jewellery5.jpg" loading="eager" alt="Repeat: Red and gold bridal jewellery set" class="clone" />
-      </div>
+      </picture>
     </div>
   </div>
+</div>
+
 
   <!-- Suits and Kurtas
   <div class="gallery-category" role="region" aria-label="Suits and Kurtas Gallery">
-    <h2 role="heading" aria-level="2">Suits and Kurtas</h2>
-    <div class="carousel-wrapper">
-      <div class="carousel track-clothing">
+  <h2 role="heading" aria-level="2">Suits and Kurtas</h2>
+  <div class="carousel-wrapper">
+    <div class="carousel track-clothing">
+
+      <picture>
+        <source srcset="/images/gallery/clothing1.webp" type="image/webp" />
         <img src="/images/gallery/clothing1.jpg" loading="eager" alt="Traditional men's kurta in navy with gold embroidery, displayed on hanger" />
+      </picture>
+      <picture>
+        <source srcset="/images/gallery/clothing2.webp" type="image/webp" />
         <img src="/images/gallery/clothing2.jpg" loading="eager" alt="Women's embroidered suit set in pastel peach with matching dupatta" />
+      </picture>
+      <picture>
+        <source srcset="/images/gallery/clothing3.webp" type="image/webp" />
         <img src="/images/gallery/clothing3.jpg" loading="eager" alt="Designer Punjabi kurta set for grooms with subtle beige and red threadwork" />
+      </picture>
+      <picture>
+        <source srcset="/images/gallery/clothing4.webp" type="image/webp" />
         <img src="/images/gallery/clothing4.jpg" loading="eager" alt="Silk suit set in maroon with matching accessories laid out on table" />
+      </picture>
+      <picture>
+        <source srcset="/images/gallery/clothing5.webp" type="image/webp" />
         <img src="/images/gallery/clothing5.jpg" loading="eager" alt="Modern kurta outfit with minimalist design and neutral tones" />
+      </picture>
+
+  CLONES
+  
+      <picture>
+        <source srcset="/images/gallery/clothing1.webp" type="image/webp" />
         <img src="/images/gallery/clothing1.jpg" loading="eager" alt="Repeat: Navy kurta with gold embroidery" class="clone" />
+      </picture>
+      <picture>
+        <source srcset="/images/gallery/clothing2.webp" type="image/webp" />
         <img src="/images/gallery/clothing2.jpg" loading="eager" alt="Repeat: Peach suit with embroidered details" class="clone" />
+      </picture>
+      <picture>
+        <source srcset="/images/gallery/clothing3.webp" type="image/webp" />
         <img src="/images/gallery/clothing3.jpg" loading="eager" alt="Repeat: Beige groom kurta with red threadwork" class="clone" />
+      </picture>
+      <picture>
+        <source srcset="/images/gallery/clothing4.webp" type="image/webp" />
         <img src="/images/gallery/clothing4.jpg" loading="eager" alt="Repeat: Maroon silk suit with accessories" class="clone" />
+      </picture>
+      <picture>
+        <source srcset="/images/gallery/clothing5.webp" type="image/webp" />
         <img src="/images/gallery/clothing5.jpg" loading="eager" alt="Repeat: Minimalist neutral-toned kurta outfit" class="clone" />
-      </div>
+      </picture>
     </div>
   </div>
+</div>
 
   -->
 
