--- a/Gallery/index.html
+++ b/Gallery/index.html
@@ -119,7 +119,7 @@
   
 <body>
 
-<<!-- HEADER AND MENU -->
+<!-- HEADER AND MENU -->
 <header class="main-header" role="banner">
   <a href="/" class="header-left" aria-label="Mira Creations Event Decor Page">
     <div class="logo-container header-logo-container">
