--- a/ContactUs/index.html
+++ b/ContactUs/index.html
@@ -115,6 +115,7 @@
   <link rel="stylesheet" href="/style.css" />
   <link href="https://fonts.googleapis.com/css2?family=Patrick+Hand&display=swap" rel="stylesheet" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+  <link rel="sitemap" type="application/xml" title="Sitemap" href="https://miradecorandjewellery.com/sitemap.xml" />
 </head>
 
 
