--- a/AboutUs/index.html
+++ b/AboutUs/index.html
@@ -178,6 +178,7 @@
   <!-- Styles and Fonts -->
   <link rel="stylesheet" href="/style.css" />
   <link href="https://fonts.googleapis.com/css2?family=Patrick+Hand&display=swap" rel="stylesheet" />
+  <link rel="sitemap" type="application/xml" title="Sitemap" href="https://miradecorandjewellery.com/sitemap.xml" />
 </head>
 
   
