--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <meta name="description" content="Mira Creations offers luxury event decor and handcrafted jewellery for weddings, cultural celebrations, and special events in Edmonton and surrounding areas." />
   <meta name="keywords" content="Mira Creations, event decor Edmonton, wedding decor Edmonton, Indian wedding decoration, Indian wedding decoration Edmonton, Edmonton jewellery, stage decoration, cultural event decor, bridal accessories Edmonton" />
   <meta name="robots" content="index, follow" />
-  <link rel="canonical" href="https://www.miradecorandjewellery.com/" />
+  <link rel="canonical" href="https://www.miradecorandjewellery.com" />
 
   <!-- Google tag (gtag.js) -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-G51T75TMJY"></script>
@@ -25,7 +25,7 @@
   <meta property="og:title" content="Event Decor & Jewelry in Edmonton | Mira Creations" />
   <meta property="og:description" content="Luxury wedding and event decor with elegant jewellery collections for your special day in Edmonton." />
   <meta property="og:image" content="https://miradecorandjewellery.com/images/Logo-Purple.jpg" />
-  <meta property="og:url" content="https://miradecorandjewellery.com/" />
+  <meta property="og:url" content="https://miradecorandjewellery.com" />
   <meta property="og:type" content="website" />
   <meta property="og:locale" content="en_CA" />
 
@@ -102,7 +102,7 @@
       "@type": "ListItem",
       "position": 1,
       "name": "Home",
-      "item": "https://miradecorandjewellery.com/"
+      "item": "https://miradecorandjewellery.com"
     }
   ]
 }
@@ -324,7 +324,7 @@
     <h2 class="specialize-title" role="heading" aria-level="2">Contact Us</h2>
 
     <meta itemprop="name" content="Mira Creations" />
-    <meta itemprop="url" content="https://miradecorandjewellery.com/" />
+    <meta itemprop="url" content="https://miradecorandjewellery.com" />
     <meta itemprop="image" content="https://miradecorandjewellery.com/images/Logo-Purple.png" />
 
     <form action="https://formsubmit.io/send/mira.creations@outlook.com" method="POST" class="contact-form">
@@ -377,7 +377,7 @@
 <div class="contact-overlay" id="contactOverlay" role="dialog" aria-modal="true" aria-label="Mira Creations Contact Details">
   <div class="contact-popup" itemscope itemtype="https://schema.org/LocalBusiness">
     <meta itemprop="name" content="Mira Creations" />
-    <meta itemprop="url" content="https://miradecorandjewellery.com/" />
+    <meta itemprop="url" content="https://miradecorandjewellery.com" />
     <meta itemprop="image" content="https://miradecorandjewellery.com/images/Logo-Purple.png" />
 
     <h3 role="heading" aria-level="3">Mira Creations Contact Information</h3>
