--- a/Gallery/index.html
+++ b/Gallery/index.html
@@ -9,7 +9,7 @@
   <meta name="description" content="Mira Creations offers luxury event decor and handcrafted jewellery for weddings, cultural celebrations, and special events in Edmonton and surrounding areas." />
   <meta name="keywords" content="Mira Creations, event decor Edmonton, wedding decor Edmonton, Indian wedding decoration, Indian wedding decoration Edmonton, Edmonton jewellery, stage decoration, cultural event decor, bridal accessories Edmonton" />
   <meta name="robots" content="index, follow" />
-  <link rel="canonical" href="https://miradecorandjewellery.com/Gallery" />
+  <link rel="canonical" href="https://miradecorandjewellery.com/Gallery/" />
 
   <!-- Google tag (gtag.js) -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-G51T75TMJY"></script>
@@ -106,8 +106,8 @@
     {
       "@type": "ListItem",
       "position": 2,
-      "name": "Contact Us",
-      "item": "https://miradecorandjewellery.com/ContactUs"
+      "name": "Gallery",
+      "item": "https://miradecorandjewellery.com/Gallery/"
     }
   ]
 }
@@ -415,7 +415,7 @@
     <h2 class="specialize-title" role="heading" aria-level="2">Contact Us</h2>
 
     <meta itemprop="name" content="Mira Creations" />
-    <meta itemprop="url" content="https://miradecorandjewellery.com/" />
+    <meta itemprop="url" content="https://miradecorandjewellery.com" />
     <meta itemprop="image" content="https://miradecorandjewellery.com/images/Logo-Purple.png" />
 
     <form action="https://formsubmit.io/send/mira.creations@outlook.com" method="POST" class="contact-form">
@@ -467,7 +467,7 @@
 <div class="contact-overlay" id="contactOverlay" role="dialog" aria-modal="true" aria-label="Mira Creations Contact Details">
   <div class="contact-popup" itemscope itemtype="https://schema.org/LocalBusiness">
     <meta itemprop="name" content="Mira Creations" />
-    <meta itemprop="url" content="https://miradecorandjewellery.com/" />
+    <meta itemprop="url" content="https://miradecorandjewellery.com" />
     <meta itemprop="image" content="https://miradecorandjewellery.com/images/Logo-Purple.png" />
 
     <h3 role="heading" aria-level="3">Mira Creations Contact Information</h3>
