--- a/ContactUs/index.html
+++ b/ContactUs/index.html
@@ -8,7 +8,7 @@
   <meta name="description" content="Mira Creations offers luxury event decor and handcrafted jewellery for weddings, cultural celebrations, and special events in Edmonton and surrounding areas." />
   <meta name="keywords" content="Mira Creations, event decor Edmonton, wedding decor Edmonton, Indian wedding decoration, Indian wedding decoration Edmonton, Edmonton jewellery, stage decoration, cultural event decor, bridal accessories Edmonton" />
   <meta name="robots" content="index, follow" />
-  <link rel="canonical" href="https://miradecorandjewellery.com/ContactUs" />
+  <link rel="canonical" href="https://miradecorandjewellery.com/ContactUs/" />
 
   <!-- Google tag (gtag.js) -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-G51T75TMJY"></script>
@@ -23,7 +23,7 @@
   <meta property="og:title" content="Contact Us | Mira Creations" />
   <meta property="og:description" content="Contact Mira Creations for event decor and jewellery consultations in Edmonton. Request a quote today." />
   <meta property="og:image" content="https://miradecorandjewellery.com/images/og-contact.jpg" />
-  <meta property="og:url" content="https://miradecorandjewellery.com/ContactUs" />
+  <meta property="og:url" content="https://miradecorandjewellery.com/ContactUs/" />
   <meta property="og:type" content="website" />
 
   <!-- Twitter Card Tags -->
@@ -99,7 +99,7 @@
       "@type": "ListItem",
       "position": 1,
       "name": "Home",
-      "item": "https://miradecorandjewellery.com/"
+      "item": "https://miradecorandjewellery.com"
     },
     {
       "@type": "ListItem",
