--- a/AboutUs/index.html
+++ b/AboutUs/index.html
@@ -163,13 +163,13 @@
       "@type": "ListItem",
       "position": 1,
       "name": "Home",
-      "item": "https://miradecorandjewellery.com/"
+      "item": "https://miradecorandjewellery.com"
     },
     {
       "@type": "ListItem",
       "position": 2,
       "name": "About Us",
-      "item": "https://miradecorandjewellery.com/AboutUs"
+      "item": "https://miradecorandjewellery.com/AboutUs/"
     }
   ]
 }
@@ -337,7 +337,7 @@
     <h2 class="specialize-title" role="heading" aria-level="2">Contact Us</h2>
 
     <meta itemprop="name" content="Mira Creations" />
-    <meta itemprop="url" content="https://miradecorandjewellery.com/" />
+    <meta itemprop="url" content="https://miradecorandjewellery.com" />
     <meta itemprop="image" content="https://miradecorandjewellery.com/images/Logo-Purple.png" />
 
     <form action="https://formsubmit.io/send/mira.creations@outlook.com" method="POST" class="contact-form">
@@ -390,7 +390,7 @@
 <div class="contact-overlay" id="contactOverlay" role="dialog" aria-modal="true" aria-label="Mira Creations Contact Details">
   <div class="contact-popup" itemscope itemtype="https://schema.org/LocalBusiness">
     <meta itemprop="name" content="Mira Creations" />
-    <meta itemprop="url" content="https://miradecorandjewellery.com/" />
+    <meta itemprop="url" content="https://miradecorandjewellery.com" />
     <meta itemprop="image" content="https://miradecorandjewellery.com/images/Logo-Purple.png" />
 
     <h3 role="heading" aria-level="3">Mira Creations Contact Information</h3>
