--- a/AboutUs/index.html
+++ b/AboutUs/index.html
@@ -9,7 +9,7 @@
   <meta name="description" content="Mira Creations offers luxury event decor and handcrafted jewellery for weddings, cultural celebrations, and special events in Edmonton and surrounding areas." />
   <meta name="keywords" content="Mira Creations, event decor Edmonton, wedding decor Edmonton, Indian wedding decoration, Indian wedding decoration Edmonton, Edmonton jewellery, stage decoration, cultural event decor, bridal accessories Edmonton" />
   <meta name="robots" content="index, follow" />
-  <link rel="canonical" href="https://miradecorandjewellery.com/AboutUs/" />
+  <link rel="canonical" href="https://www.miradecorandjewellery.com/AboutUs/" />
 
   <!-- Google tag (gtag.js) -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-G51T75TMJY"></script>
