--- a/index.html
+++ b/index.html
@@ -328,6 +328,7 @@
     <meta itemprop="image" content="https://miradecorandjewellery.com/images/Logo-Purple.png" />
 
     <form action="https://formsubmit.co/mira.creations@outlook.com" method="POST" class="contact-form">
+      <input type="hidden" name="_captcha" value="false">
       <input type="text" name="name" placeholder="Your Name" required />
       <input type="email" name="email" placeholder="Your Email" required />
       <input type="tel" name="phone" placeholder="Your Phone Number" required />
