--- a/index.html
+++ b/index.html
@@ -501,26 +501,26 @@
 <!-- FORM SUBMIT SCRIPTS -->
 
 <script>
-  document.getElementById("contactForm").addEventListener("submit", function (e) {
-    e.preventDefault(); // prevent the default form submission behavior
-    const form = this;
+  document.querySelector('.contact-form').addEventListener('submit', function (e) {
+    e.preventDefault(); // block default form action
 
-    // Send the form data manually via fetch
+    const form = e.target;
+    const formData = new FormData(form);
+
     fetch(form.action, {
-      method: "POST",
-      body: new FormData(form),
-      headers: {
-        'Accept': 'application/json'
-      }
+      method: 'POST',
+      body: formData,
+      headers: { 'Accept': 'application/json' }
     }).then(response => {
       if (response.ok) {
-        form.style.display = "none";
-        document.getElementById("thankYouMessage").style.display = "block";
+        form.style.display = 'none';
+        document.getElementById('thankYouMessage').style.display = 'block';
       } else {
-        alert("There was an issue sending your message. Please try again.");
+        alert("Submission failed. Please try again.");
       }
-    }).catch(() => {
-      alert("Something went wrong. Please check your connection and try again.");
+    }).catch(error => {
+      alert("Something went wrong.");
+      console.error(error);
     });
   });
 </script>
