--- a/Gallery/index.html
+++ b/Gallery/index.html
@@ -418,13 +418,21 @@
     <meta itemprop="url" content="https://miradecorandjewellery.com" />
     <meta itemprop="image" content="https://miradecorandjewellery.com/images/Logo-Purple.png" />
 
-    <form action="https://formsubmit.io/send/mira.creations@outlook.com" method="POST" class="contact-form">
+ <form action="https://formsubmit.co/mira.creations@outlook.com" method="POST" class="contact-form">
+      <input type="hidden" name="_captcha" value="false">
+      <input type="hidden" name="_next" value="">
       <input type="text" name="name" placeholder="Your Name" required />
       <input type="email" name="email" placeholder="Your Email" required />
       <input type="tel" name="phone" placeholder="Your Phone Number" required />
       <textarea name="message" placeholder="Tell us about your event or jewelry needs" required></textarea>
-      <button type="submit">Send Message</button>
+      <button type="submit">Send Mira Creations a Message</button>
     </form>
+
+    <div id="thankYouMessage" style="display: none; color: white; margin-top: 20px; font-size: 1.1rem;">
+      Thank you for contacting Mira Creations. We will reach out to connect for your event decoration or jewellery need shortly!
+    </div>
+    
+  </div>
 </section>
 
 
@@ -608,6 +616,32 @@
   // Trigger once on page load
   window.dispatchEvent(new Event('scroll'));
 </script>
+
+<script>
+  document.querySelector('.contact-form').addEventListener('submit', function (e) {
+    e.preventDefault(); // block default form action
+
+    const form = e.target;
+    const formData = new FormData(form);
+
+    fetch(form.action, {
+      method: 'POST',
+      body: formData,
+      headers: { 'Accept': 'application/json' }
+    }).then(response => {
+      if (response.ok) {
+        form.style.display = 'none';
+        document.getElementById('thankYouMessage').style.display = 'block';
+      } else {
+        alert("Submission failed. Please try again.");
+      }
+    }).catch(error => {
+      alert("Something went wrong.");
+      console.error(error);
+    });
+  });
+</script>
+
 
 
 
