--- a/AboutUs/index.html
+++ b/AboutUs/index.html
@@ -340,17 +340,23 @@
     <meta itemprop="url" content="https://miradecorandjewellery.com" />
     <meta itemprop="image" content="https://miradecorandjewellery.com/images/Logo-Purple.png" />
 
-    <form action="https://formsubmit.io/send/mira.creations@outlook.com" method="POST" class="contact-form">
+  <form action="https://formsubmit.co/mira.creations@outlook.com" method="POST" class="contact-form">
+      <input type="hidden" name="_captcha" value="false">
+      <input type="hidden" name="_next" value="">
       <input type="text" name="name" placeholder="Your Name" required />
       <input type="email" name="email" placeholder="Your Email" required />
       <input type="tel" name="phone" placeholder="Your Phone Number" required />
       <textarea name="message" placeholder="Tell us about your event or jewelry needs" required></textarea>
-      <button type="submit">Send Message</button>
+      <button type="submit">Send Mira Creations a Message</button>
     </form>
+
+    <div id="thankYouMessage" style="display: none; color: white; margin-top: 20px; font-size: 1.1rem;">
+      Thank you for contacting Mira Creations. We will reach out to connect for your event decoration or jewellery need shortly!
+    </div>
     
   </div>
 </section>
-
+  
 <!-- FOOTER SECTION -->
 <footer class="site-footer" role="contentinfo" aria-label="Mira Creations footer">
   <div class="footer-content">
