--- a/ContactUs/index.html
+++ b/ContactUs/index.html
@@ -194,13 +194,20 @@
   <!-- CONTACT FORM -->
   <div class="quote-section" role="form" aria-labelledby="quote-heading">
     <h2 id="quote-heading">Request a Free Quote</h2>
-    <form action="https://formsubmit.io/send/mira.creations@outlook.com" method="POST" class="contact-form">
-      <input type="text" name="name" placeholder="Your Name" required aria-label="Your Name" />
-      <input type="email" name="email" placeholder="Your Email" required aria-label="Your Email" />
-      <input type="tel" name="phone" placeholder="Your Phone Number" required aria-label="Your Phone Number" />
-      <textarea name="message" placeholder="How can we help you?" required aria-label="Your Message"></textarea>
-      <button type="submit" aria-label="Submit Contact Form">Send Message</button>
+    <form action="https://formsubmit.co/mira.creations@outlook.com" method="POST" class="contact-form">
+      <input type="hidden" name="_captcha" value="false">
+      <input type="hidden" name="_next" value="">
+      <input type="text" name="name" placeholder="Your Name" required />
+      <input type="email" name="email" placeholder="Your Email" required />
+      <input type="tel" name="phone" placeholder="Your Phone Number" required />
+      <textarea name="message" placeholder="Tell us about your event or jewelry needs" required></textarea>
+      <button type="submit">Send Mira Creations a Message</button>
     </form>
+
+    <div id="thankYouMessage" style="display: none; color: white; margin-top: 20px; font-size: 1.1rem;">
+      Thank you for contacting Mira Creations. We will reach out to connect for your event decoration or jewellery need shortly!
+    </div>
+    
   </div>
 </section>
   
@@ -252,6 +259,31 @@
   // Optional: Close on link click
   document.querySelectorAll('.mobile-menu-links a').forEach(link => {
     link.addEventListener('click', () => mobileNav.classList.remove('active'));
+  });
+</script>
+
+<script>
+  document.querySelector('.contact-form').addEventListener('submit', function (e) {
+    e.preventDefault(); // block default form action
+
+    const form = e.target;
+    const formData = new FormData(form);
+
+    fetch(form.action, {
+      method: 'POST',
+      body: formData,
+      headers: { 'Accept': 'application/json' }
+    }).then(response => {
+      if (response.ok) {
+        form.style.display = 'none';
+        document.getElementById('thankYouMessage').style.display = 'block';
+      } else {
+        alert("Submission failed. Please try again.");
+      }
+    }).catch(error => {
+      alert("Something went wrong.");
+      console.error(error);
+    });
   });
 </script>
 
