--- a/AboutUs/index.html
+++ b/AboutUs/index.html
@@ -542,6 +542,31 @@
   window.dispatchEvent(new Event('scroll'));
 </script>
 
+<script>
+  document.querySelector('.contact-form').addEventListener('submit', function (e) {
+    e.preventDefault(); // block default form action
+
+    const form = e.target;
+    const formData = new FormData(form);
+
+    fetch(form.action, {
+      method: 'POST',
+      body: formData,
+      headers: { 'Accept': 'application/json' }
+    }).then(response => {
+      if (response.ok) {
+        form.style.display = 'none';
+        document.getElementById('thankYouMessage').style.display = 'block';
+      } else {
+        alert("Submission failed. Please try again.");
+      }
+    }).catch(error => {
+      alert("Something went wrong.");
+      console.error(error);
+    });
+  });
+</script>
+
 
 </body>
 </html>
