--- a/Gallery/index.html
+++ b/Gallery/index.html
@@ -429,7 +429,7 @@
     </form>
 
     <div id="thankYouMessage" style="display: none; color: white; margin-top: 20px; font-size: 1.1rem;">
-      Thank you for contacting Mira Creations. We will reach out to connect for your event decoration or jewellery need shortly!
+      Thank you for contacting Mira Creations. We will reach out to connect for your event decoration or jewellery needs shortly!
     </div>
     
   </div>
