--- a/AboutUs/index.html
+++ b/AboutUs/index.html
@@ -204,7 +204,7 @@
     
     <div class="brand-text">
       <div class="brand-title">MIRA CREATIONS</div>
-      <div class="brand-subtitle">JEWELLERY AND DECOR</div>
+      <div class="brand-subtitle">DECOR AND JEWELLERY</div>
     </div>
   </a>
 
